--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node src/index.js"
   },
   "dependencies": {
+    "@fastify/view": "^11.1.1",
     "fastify": "^5.6.2",
-    "fastify-cli": "^7.4.1"
+    "fastify-cli": "^7.4.1",
+    "pug": "^3.0.3"
   }
 }
