--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "node --watch src/index.js"
   },
   "dependencies": {
+    "@fastify/formbody": "^8.0.2",
     "@fastify/view": "^11.1.1",
     "fastify": "^5.6.2",
     "fastify-cli": "^7.4.1",
