--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fastify/view": "^11.1.1",
     "fastify": "^5.6.2",
     "fastify-cli": "^7.4.1",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "yup": "^1.7.1"
   }
 }
