--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "node --watch src/index.js"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/formbody": "^8.0.2",
     "@fastify/middie": "^9.0.3",
     "@fastify/view": "^11.1.1",
